# dynamic_graph_manager

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  package.xml  readme.md  relaunch_control_process.md  setup.py
cmake/: boost.cmake  dg-dirs.cmake  python-module-py.cc  python.cmake
demos/: CMakeLists.txt  demo_dynamic_graph_controller.cpp  demo_ros_python_interpreter_server.cpp  demo_single_motor.cpp  filter_graph.py  main.cpp  simple_dgm.hpp  simple_dgm_hwd_client.py  simple_robot.yaml  single_motor_main.py
demos/single_motor/: dgm_single_motor.cpp  dgm_single_motor.hh  dgm_single_motor.yaml  dgm_single_motor_controller.cpp  dgm_single_motor_controller.hh  dgm_single_motor_simu.yaml  main_device_simulator.py  single_motor_device_simulator.cpp
doc/: basic control_graph.dox  continuous_integration.dox  debugging.dox  demos.dox  installation.dox  launch.dox  main.dox  motivation_history.dox  plotting_tools.dox  robot_dashboard.dox  robot_properties.dox  robot_simulation.dox
doc/figures/: vocabulary_graph.dia
doc/figures/intro/: dynamic_graph_manager_architecture.dia
include/dynamic_graph_manager/: device.hh  device.hpp  device_simulator.hh  device_simulator.hpp  dgm_head.hpp  dynamic_graph_controller.hpp  dynamic_graph_manager.hh  dynamic_graph_manager.hpp  hardware_process.hpp  matrix-geometry.hh  periodic-call.hh  periodic-call.hpp  ros.hpp  ros_init.hh  ros_init.hpp  ros_interpreter.hh  ros_interpreter.hpp  ros_python_interpreter_client.hpp  ros_python_interpreter_server.hpp  shared_memory.hpp  tools.hh  tools.hpp  yaml_eigen.h  yaml_parsing.hpp
include/dynamic_graph_manager/exception/: exception-abstract.hh  exception-abstract.hpp  exception-dynamic.hh  exception-dynamic.hpp  exception-factory.hh  exception-factory.hpp  exception-feature.hh  exception-feature.hpp  exception-signal.hh  exception-signal.hpp  exception-task.hh  exception-task.hpp  exception-tools.hh  exception-tools.hpp  exception-yaml-cpp.hpp
include/dynamic_graph_manager/ros_entities/: dg_ros_mapping.hpp  matrix_geometry.hpp  ros_publish.hpp  ros_publish.hxx  ros_queued_subscribe.hpp  ros_queued_subscribe.hxx  ros_subscribe.hpp  ros_subscribe.hxx  ros_tf_listener.hpp  ros_time.hpp  time_point_io.hpp
include/ros_entities/: converter.hh  converter.hpp  dg_to_ros.hh  dg_to_ros.hpp  matrix_geometry.hh  matrix_geometry.hpp  ros_publish.hh  ros_publish.hpp  ros_publish.hxx  ros_queued_subscribe.hh  ros_queued_subscribe.hpp  ros_queued_subscribe.hxx  ros_robot_state_publisher.hpp  ros_robot_state_publisher_mt.hpp  ros_subscribe.hh  ros_subscribe.hpp  ros_subscribe.hxx  ros_tf_listener.hh  ros_tf_listener.hpp  ros_time.hh  ros_time.hpp
msg/: Matrix.msg
python/dynamic_graph_manager/: dynamic_graph_manager_client.py  ipython_kernel.py  prologue.py  robot.py  robot_pose_publisher  robot_pose_publisher.py  run_command.py
python/dynamic_graph_manager/device/: prologue.py  robot.py
python/dynamic_graph_manager/ros/: __init__.py  dgcompleter.py  ros.py  ros_client.py  ros_python_interpreter_client.py  shell_client.py
python/ros/: dgcompleter.py  ros.py
python/ros_nodes/: __init__.py  remote_python_client  remote_python_client.py  robot_pose_publisher.py  run_command  run_command.py  run_command_backup.py  tf_publisher  tf_publisher.py
ros_nodes/: remote_python_client.py  start_python_kernel.py
src/: CMakeLists.txt  device.cpp  device_simulator.cpp  dgm_head.cpp  dynamic_graph_controller.cpp  dynamic_graph_manager.cpp  hardware_process.cpp  periodic-call.cpp  ros.cpp  ros_init.cpp  ros_interpreter.cpp  ros_python_interpreter_client.cpp  ros_python_interpreter_server.cpp  tools.cpp  yaml_parsing.cpp
src/exception/: exception-abstract.cpp  exception-dynamic.cpp  exception-factory.cpp  exception-feature.cpp  exception-signal.cpp  exception-task.cpp  exception-tools.cpp  exception-yaml-cpp.cpp
src/program/: delete_dgm_shm.cpp
src/ros_entities/: converter.cpp  dg_ros_mapping.cpp  dg_to_ros.cpp  dummy.cpp  ros_publish.cpp  ros_publish.hxx  ros_queued_subscribe.cpp  ros_queued_subscribe.hh  ros_queued_subscribe.hxx  ros_robot_state_publisher.cpp  ros_robot_state_publisher_mt.cpp  ros_subscribe.cpp  ros_subscribe.hh  ros_tf_listener.cpp  ros_time.cpp  ros_time.hh
srcpy/: CMakeLists.txt  __init__.py  device_dg_python_module.cpp  dgm_head.cpp  dynamic_graph_manager.cpp  ros_entities_dg_python_module.cpp  ros_python_interpreter_client.cpp
srv/: RunCommand.srv  RunPythonCommand.srv  RunPythonFile.srv  TestUserCmdBool.srv
tests/: CMakeLists.txt  main.cpp  test_common.hpp  test_cpp_features.cpp  test_device.cpp  test_dgm_common.cpp  test_dgm_control.cpp  test_dgm_hardware.cpp  test_dynamic_graph_manager.cpp  test_dynamic_graph_manager.py  test_dynamic_graph_manager.test  test_dynamic_graph_manager_common.cpp  test_dynamic_graph_manager_control.cpp  test_dynamic_graph_manager_hardware.cpp  test_ros_init.cpp  test_ros_init.test  test_ros_interpreter.cpp  test_ros_interpreter.test
tests/config/: simple_add.py  simple_add_fail.py  simple_robot.srdf  simple_robot.yaml
