<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>


<package format="3">

    <name>dynamic_graph_manager</name>
    <version>1.0.0</version>
    
    <description>
        This project implements a control architecture based on the
        dynamic_graph.
    </description>

    <maintainer email="mnaveau@tuebingen.mpg.de">Maximilien Naveau</maintainer>

    <license>BSD 3-clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    
    <!-- Message dependencies. -->
    <depend>std_srvs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>mim_msgs</depend>

    <!-- Dynamic Graph dependency. -->
    <depend>dynamic_graph</depend>
  
    <!-- Dynamic Graph python bindings and python interpreter. -->
    <depend>dynamic_graph_python</depend>

    <!-- Eigen interface. -->
    <depend>Eigen3</depend>

    <!-- CMake module containing helper to find the OS, boost, python, etc. -->
    <depend>mpi_cmake_modules</depend>

    <!-- Use YAML files to parameterize the DynamicGraph device.  -->
    <depend>yaml_utils</depend>

    <!-- Python bindings. -->
    <depend>pybind11_vendor</depend>
    <depend>pybind11</depend>

    <!-- Access to a shared memory -->
    <depend>shared_memory</depend>

    <!-- real_time_tools -->
    <depend>real_time_tools</depend>

    <!-- ROS2 message generation. -->
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <!-- Unit-tests. -->
    <test_depend>ament_cmake_gtest</test_depend>
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
